--- a/index.css
+++ b/index.css
@@ -2,16 +2,22 @@
   margin: 0;
   padding: 0;
 }
+#wrapper {
+  position: sticky;
+  top: 0px;
+  background: white;
+  padding: 1px 0px;
+}
 .navbar {
   display: flex;
-  font-family: "Balsamiq Sans", cursive;
+
   /* margin: 25px 0px; */
   /* padding-top: 25px; */
   align-items: center;
   justify-content: space-between;
   width: 80%;
   margin: auto;
-  margin: 25px auto;
+  margin: 15px auto;
 }
 
 .left svg {
@@ -26,12 +32,13 @@
 }
 .right ul li {
   list-style: none;
+  font-family: sans-serif;
 }
 .right ul li a {
   text-decoration: none;
-  padding: 0px 13px;
+  padding: 0px 10px;
   font-size: 16px;
-  color: hsl(216, 30%, 68%);
+  color: hsl(256, 26%, 20%);
 }
 .right ul li a:hover {
   color: hsl(256, 26%, 20%);
@@ -55,6 +62,9 @@
   color: white;
   width: 80%;
   margin: auto;
+}
+.left-head p {
+  color: hsl(0, 0%, 98%);
 }
 .left-head {
   /* width: 42%; */
@@ -105,10 +115,12 @@
   display: flex;
   margin: 80px 0px;
 }
-/* .SAP svg {
-        display: block;
-        margin: auto;
-      } */
+#PPP h3 {
+  columns: hsl(273, 4%, 51%);
+}
+#PPP p {
+  color: hsl(273, 4%, 51%);
+}
 .process {
   width: 33.33%;
 
